--- a/static/sass/partials/_type-about.sass
+++ b/static/sass/partials/_type-about.sass
@@ -8,12 +8,9 @@ $portrait-width: 400px
 // breakpoints
 // ----------------
 
-+breakpoint($breakpoint-desktop)
-  .about > article
-    +centre
-
-    p
-      width: $portrait-width
++breakpoint($breakpoint-mobile)
+  #main[class="about"]
+    width: 100%
 
 
 // ----------------
