--- a/static/sass/partials/_type-comic.sass
+++ b/static/sass/partials/_type-comic.sass
@@ -8,7 +8,6 @@
 // ----------------
 
 
-
 // ----------------
 // styles
 // ----------------
@@ -17,6 +16,10 @@
 
   article
     +table-centre-child
+
+    img
+      width: 100%
+
 
   nav
     +leader(1)
